@@ -15,6 +15,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.hadoop.yarn.api.protocolrecords;
 
 import org.apache.hadoop.classification.InterfaceAudience.Private;
@@ -36,10 +37,10 @@ import org.apache.hadoop.yarn.util.Records;
  */
 @Public
 @Unstable
-public class MoveApplicationAcrossQueuesResponse {
+public abstract class MoveApplicationAcrossQueuesResponse {
   @Private
   @Unstable
-  public MoveApplicationAcrossQueuesResponse newInstance() {
+  public static MoveApplicationAcrossQueuesResponse newInstance() {
     MoveApplicationAcrossQueuesResponse response =
         Records.newRecord(MoveApplicationAcrossQueuesResponse.class);
     return response;
